Save match snapshots on server
